--- a/.login.config
+++ b/.login.config
@@ -1,4 +1,4 @@
-# Setup file for login form.
+# Setup file for login form
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Take time to read each comments to understand what each config item
 # will impact the engine.
